# lametta

./: README.md  pyproject.toml
src/lametta/: __init__.py  discriminator_field.py  field.py  settings_decorator.py  settings_fragment.py  settings_fragment_protocol.py
src/lametta/settings_fragments/: __init__.py  instantiation.py  protocol.py  settings_fragment.py  type_validation.py
test/: test_settings.py  test_settings_api.py
